<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Zavalinka</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">Account</string>
    <string name="label_login">Login</string>
    <string name="login_placeholder">john_doe</string>
    <string name="passwd_placeholder">********</string>
    <string name="label_passwd">Password</string>
    <string name="login_button">Login</string>
    <string name="please_fill_credentials">Please, fill your login and password in.</string>
    <string name="logging_in_progress_msg" tools:ignore="TypographyEllipsis">Logging in, please wait...</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_succeeded">Login succeeded!</string>
    <string name="zavalinka_is_running">Zavalinka is running!</string>
    <string name="online">online</string>
    <string name="online_noauth">connected, awaiting auth</string>
    <string name="disconnected">disconnected</string>
    <string name="reconnect_failed" tools:ignore="TypographyEllipsis">reconnecting...</string>
    <string name="action_exit">Exit</string>
    <string name="action_logoff">Exit and logoff</string>
    <string name="presence_indicator">Presence indicator</string>
    <string name="have_unread_indicator">Have unread messages indicator</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message_placeholder" tools:ignore="TypographyEllipsis">type your message here...</string>
    <string name="send_message">Send message</string>
    <string name="symbol_outgoing">▶▶▶</string>
    <string name="symbol_incoming">◀◀◀</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="lorem_ipsum_numbers">12:34:56 07.08.9000</string>
    <string name="error_no_connection">No connection to server.</string>
    <string name="error_failed_to_send">Failed to send message :(</string>
</resources>
