<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.raegdan.zavalinka.AuthActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:id="@+id/tvLoginLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginField"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvLoginLabel"
            android:hint="@string/login_placeholder"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="@dimen/std_delimiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_passwd"
            android:id="@+id/tvPasswdLabel"
            android:layout_below="@id/etLoginField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/etPasswdField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvPasswdLabel"
            android:hint="@string/passwd_placeholder"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etPasswdField"
            android:layout_marginTop="@dimen/std_delimiter"
            android:id="@+id/btnLogin" />



    </RelativeLayout>

</RelativeLayout>
